--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,11 +14,12 @@
 :root {
   /* --default-font: "Open Sans",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; 
    --heading-font: "Jost",  sans-serif; */
-   --default-font:"Avenir";
-  --heading-font: "Avenir";
+                                                
+   --default-font:'Avenir', sans-serif;
+  --heading-font: 'Avenir', sans-serif;
   /* --nav-font: "Poppins",  sans-serif; */
-  --nav-font: "Avenir";
-  --default-font: "Avenir"
+  --nav-font: 'Avenir', sans-serif;
+  --default-font: 'Avenir', sans-serif;
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
